Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19511

QDeclarativeImageProvider::requestTexture leak textures

    XMLWordPrintable

Details

    • 2a720d2056b6f0b78b6d24928f7e2d9f8a38edb3 , bfb347a463ceff05628abea6a105f6c83f100725

    Description

      Textures returned from QDeclarativeImageProvider::requestTexture are not deleted. Easy to re-produce with ListView together with an Image delegate using a custom image provider.

      The first hint is given by qmlscene's default output at exit. In my particular case:
      "Number of leaked textures: 17"

      And if I "qDebug() << m_cache.size()" in QDeclarativePixmapStore's destructor, I get exactly the same number. Not sure if it is related though.

      The destructor of the texture returned from ::requestTexture is never called, so something is obviously broken.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bjnilsen Bjørn Erik Nilsen
            bjnilsen Bjørn Erik Nilsen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes