Textures not scheduled for deletion while scrolling QML view.

This happened when scrolling a view using an Image delegate (containing
QSGTexture). All textures were deleted at exit, but it is important to
immediately schedule the texture for deletion whenever the delegate is
destroyed to avoid unnecessary high memory consumption.

Task-number: QTBUG-19511
Reviewed-by: gunnar